Code optimization. Fixed product sizes options causing overflow.

--- a/client/src/Components/ProductDIsplay/ProductDisplay.css
+++ b/client/src/Components/ProductDIsplay/ProductDisplay.css
@@ -79,6 +79,7 @@
 
 .productdisplay-right-sizes {
     display: flex;
+    flex-wrap: wrap;
     margin: 30px 0px;
     gap: 20px;
 }
